# polyte

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
polyte/: Cargo.toml  README.md
polyte-cli/: Cargo.toml  README.md
polyte-cli/src/: main.rs
polyte-cli/src/commands/: mod.rs
polyte-cli/src/commands/data/: activity.rs  builders.rs  holders.rs  live_volume.rs  mod.rs  open_interest.rs  positions.rs  traded.rs  trades.rs
polyte-cli/src/commands/gamma/: comments.rs  events.rs  markets.rs  series.rs  sports.rs  tags.rs
polyte-clob/: Cargo.toml  README.md
polyte-clob/examples/: README.md  balance_allowance.rs  retrieve_markets.rs  ws_market.rs  ws_user.rs
polyte-clob/src/: client.rs  error.rs  lib.rs  request.rs  signer.rs  types.rs  utils.rs  wallet.rs
polyte-clob/src/account/: credentials.rs  mod.rs
polyte-clob/src/api/: account.rs  markets.rs  mod.rs  orders.rs
polyte-clob/src/core/: chain.rs  eip712.rs  mod.rs
polyte-clob/src/ws/: auth.rs  client.rs  error.rs  market.rs  mod.rs  subscription.rs  user.rs
polyte-core/: Cargo.toml  README.md
polyte-core/src/: client.rs  error.rs  lib.rs  request.rs
polyte-data/: Cargo.toml  README.md
polyte-data/src/: client.rs  error.rs  lib.rs  request.rs  types.rs
polyte-data/src/api/: builders.rs  health.rs  holders.rs  live_volume.rs  mod.rs  open_interest.rs  trades.rs  users.rs
polyte-gamma/: Cargo.toml  README.md
polyte-gamma/examples/: advanced_market_filtering.rs  retrieve_events.rs  retrieve_markets.rs  retrieve_series.rs  retrieve_sports.rs  retrieve_tags.rs
polyte-gamma/src/: client.rs  error.rs  lib.rs  request.rs  types.rs
polyte-gamma/src/api/: comments.rs  events.rs  markets.rs  mod.rs  series.rs  sports.rs  tags.rs
polyte/src/: lib.rs
scripts/: install.sh
