[workspace]
members = [
  "polyte",
  "polyte-cli",
  "polyte-clob",
  "polyte-core",
  "polyte-data",
  "polyte-gamma",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Kenji Lau <hello@kenji.sh>"]
repository = "https://github.com/roushou/polyte"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
url = "2.5"
hex = "0.4"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
