[package]
name = "polyte-clob"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client library for Polymarket CLOB (order book) API"
keywords = ["polymarket", "prediction-markets", "trading", "clob"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["ws"]
ws = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
alloy = { version = "1.1.2", features = [
  "contract",
    "network",
    "provider-http",
    "rpc-types",
    "signer-local",
    "signers",
] }
polyte-core = { path = "../polyte-core", version = "0.1.6" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
rand = { version = "0.9.2", features = ["std"] }
urlencoding = "2.1"
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
polyte-gamma = { path = "../polyte-gamma" }
futures-util = { workspace = true }
