[package]
name = "polyte-core"
version = "0.1.7"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core utilities and shared types for Polyte Polymarket API clients"
keywords = ["polymarket", "api", "core"]
categories = ["api-bindings"]

[features]
default = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
