[package]
name = "polyte-data"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client library for Polymarket Data API"
keywords = ["polymarket", "prediction-markets"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []

[dependencies]
polyte-core = { path = "../polyte-core", version = "0.1.6" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
