[package]
name = "polyte-gamma"
version = "0.1.7"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client library for Polymarket Gamma (market data) API"
keywords = ["polymarket", "prediction-markets", "api", "gamma"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []

[dependencies]
polyte-core = { path = "../polyte-core", version = "0.1.7" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "retrieve_markets"
path = "examples/retrieve_markets.rs"

[[example]]
name = "retrieve_sports"
path = "examples/retrieve_sports.rs"

[[example]]
name = "retrieve_tags"
path = "examples/retrieve_tags.rs"

[[example]]
name = "retrieve_series"
path = "examples/retrieve_series.rs"

[[example]]
name = "advanced_market_filtering"
path = "examples/advanced_market_filtering.rs"

[[example]]
name = "retrieve_events"
path = "examples/retrieve_events.rs"
