[package]
name = "polyte"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified Rust client for Polymarket APIs (CLOB + Gamma)"
keywords = ["polymarket", "prediction-markets", "api", "trading"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["clob", "gamma"]
clob = ["dep:polyte-clob"]
gamma = ["dep:polyte-gamma"]
full = ["clob", "gamma"]

[dependencies]
polyte-gamma = { path = "../polyte-gamma", version = "0.1.0", optional = true }
polyte-clob = { path = "../polyte-clob", version = "0.1.0", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
