[package]
name = "polyte"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified Rust client for Polymarket APIs (CLOB, Gamma and Data)"
keywords = ["polymarket", "prediction-markets", "api", "trading"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["clob", "gamma", "data"]
clob = ["dep:polyte-clob"]
gamma = ["dep:polyte-gamma"]
data = ["dep:polyte-data"]
full = ["clob", "gamma", "data"]

[dependencies]
polyte-gamma = { path = "../polyte-gamma", version = "0.1.8", optional = true }
polyte-clob = { path = "../polyte-clob", version = "0.1.7", optional = true }
polyte-data = { path = "../polyte-data", version = "0.1.1", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
